--- a/Prime/Prime.csproj
+++ b/Prime/Prime.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Power.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Number.cs" />
-    <Compile Include="Utility.cs" />
+    <Compile Include="Tests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
