PrimePower added to Prime tab, Polinom tab started

--- a/ProjektLab/ProjektLab.csproj
+++ b/ProjektLab/ProjektLab.csproj
@@ -60,6 +60,9 @@
     </ApplicationDefinition>
     <Compile Include="GreaterThanZeroValidationRule.cs" />
     <Compile Include="MyNumber.cs" />
+    <Compile Include="Polinom.xaml.cs">
+      <DependentUpon>Polinom.xaml</DependentUpon>
+    </Compile>
     <Compile Include="StringToUint64ValidationRule.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -73,6 +76,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Polinom.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Prime.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
