--- a/ProjektLab/ProjektLab.csproj
+++ b/ProjektLab/ProjektLab.csproj
@@ -131,6 +131,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Polinom\Polinom.csproj">
+      <Project>{65226ec8-443c-4246-8131-72f5556adf9f}</Project>
+      <Name>Polinom</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Prime\Prime.csproj">
       <Project>{c2da47f1-7c22-477c-8e66-9530b6dbb9f5}</Project>
       <Name>Prime</Name>
