Get polinom in string format from clipboard implemented. Get polinom in string format from text file implemented. Ability to use number keys on keyboard an numberic keypad inplemented. Function for correct displaying polinom in textblock implemented.

--- a/ProjektLab/ProjektLab.csproj
+++ b/ProjektLab/ProjektLab.csproj
@@ -152,5 +152,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="clipboard.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="open-archive.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
