--- a/ProjektLab/ProjektLab.csproj
+++ b/ProjektLab/ProjektLab.csproj
@@ -121,6 +121,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -157,6 +158,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="open-archive.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mathop.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
