Finite Field progress Táblázat generálás elkezdve

--- a/FiniteField/FiniteFieldLibrary.csproj
+++ b/FiniteField/FiniteFieldLibrary.csproj
@@ -41,8 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FiniteField.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Polinom\PolinomClass.csproj">
+      <Project>{65226ec8-443c-4246-8131-72f5556adf9f}</Project>
+      <Name>PolinomClass</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
