--- a/FiniteField/FiniteFieldLibrary.csproj
+++ b/FiniteField/FiniteFieldLibrary.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FiniteField.cs" />
+    <Compile Include="FiniteFieldTableViewModel.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
